--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,4 +29,7 @@ import Button from "@/components/ui/Button.astro";
       <div class="flex justify-center items-center">Image</div>
     </div>
   </section>
+  <section class="container">
+    <h2>TODO: New posts</h2>
+  </section>
 </Layout>
