--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,7 @@ section {
 
 /* CUSTOM STYLING */
 .hero {
-  background-color: rgba(193, 154, 199, 0.152);
+  background-color: #c19ac727;
   background-image: linear-gradient(
       54deg,
       rgba(255, 131, 122, 0.2),
