add blog collection schema

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,11 +6,11 @@ import { Icon } from "astro-icon/components";
 ---
 
 <header
-  class="sticky top-0 shadow-md shadow-hover dark:shadow-black/60 left-0 h-14 flex items-center bg-background"
+  class="sticky top-0 font-serif shadow-md shadow-hover dark:shadow-black/60 left-0 h-14 flex items-center bg-background"
 >
   <div class="container flex justify-between">
     <div class="flex gap-14 items-center">
-      <a href="/" class="font-extrabold text-lg font-serif">Logo</a>
+      <a href="/" class="font-extrabold text-lg">Logo</a>
       <nav
         role="navigation"
         class="max-sm:hidden"
