--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,8 +2,8 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="About">
+<Layout title="Contact">
   <section class="container">
-    <h1>About</h1>
+    <h1>Contact</h1>
   </section>
 </Layout>
