--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -2,8 +2,8 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="About">
+<Layout title="Portfolio">
   <section class="container">
-    <h1>About</h1>
+    <h1>Portfolio</h1>
   </section>
 </Layout>
