add post layout with table of content and prose styling for markdown content

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <header
-  class="sticky top-0 font-serif shadow-md shadow-hover dark:shadow-black/60 left-0 h-14 flex items-center bg-background"
+  class="sticky top-0 font-serif z-50 shadow-md shadow-hover dark:shadow-black/60 left-0 h-14 flex items-center bg-background"
 >
   <div class="container flex justify-between">
     <div class="flex gap-14 items-center">
