--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon/components";
 <footer class="py-8 md:py-12 border-t font-serif dark:border-white/10">
   <div class="container grid gap-8 md:grid-cols-2">
     <div>
-      <a href="/" class="text-lg font-bold mb-2 block">Logo</a>
+      <a href="/" class="text-lg font-bold mb-2 block w-fit">Logo</a>
       <p class="font-medium text-sm">&copy; 2024. All rights reserved.</p>
     </div>
     <div class="grid md:grid-cols-2 gap-8">
