--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import RootLayout from "@/layouts/RootLayout.astro";
 ---
 
-<Layout title="About">
+<RootLayout title="About">
   <section class="container">
     <h1>About</h1>
   </section>
-</Layout>
+</RootLayout>
