--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import RootLayout from "@/layouts/RootLayout.astro";
 ---
 
-<Layout title="Contact">
+<RootLayout title="Contact">
   <section class="container">
     <h1>Contact</h1>
   </section>
-</Layout>
+</RootLayout>
