--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import RootLayout from "@/layouts/RootLayout.astro";
 import Config from "@/config/config.json";
 import Button from "@/components/ui/Button.astro";
 ---
 
-<Layout title="Home">
+<RootLayout title="Home">
   <section class="hero">
     <div
       class="container grid lg:grid-cols-2 gap-8"
@@ -32,4 +32,4 @@ import Button from "@/components/ui/Button.astro";
   <section class="container">
     <h2>TODO: New posts</h2>
   </section>
-</Layout>
+</RootLayout>
