--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,25 +1,8 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import BlogLayout from "@/layouts/BlogLayout.astro";
 import { getCollection } from "astro:content";
 
 const blogEntries = await getCollection("blog");
 ---
 
-<Layout title="Blog">
-  <section class="hero">
-    <div class="container">
-      <h1 class="font-bold text-xl">Blog</h1>
-    </div>
-  </section>
-  <section class="container py-8">
-    <ul class="flex gap-8">
-      {
-        blogEntries.map(({ data, slug }) => (
-          <li>
-            <a href={`/blog/${slug}`}>{data.title}</a>
-          </li>
-        ))
-      }
-    </ul>
-  </section>
-</Layout>
+<BlogLayout blogPosts={blogEntries} />
