--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import RootLayout from "@/layouts/RootLayout.astro";
 ---
 
-<Layout title="Portfolio">
+<RootLayout title="Portfolio">
   <section class="container">
     <h1>Portfolio</h1>
   </section>
-</Layout>
+</RootLayout>
