--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "@/layouts/RootLayout.astro";
+import tags from "@/config/tags.json";
 import type { CollectionEntry } from "astro:content";
+import { capitalize, cn } from "@/lib/utils";
 
 interface Props {
   title?: string;
@@ -8,6 +10,7 @@ interface Props {
 }
 
 const { title = "Blog", blogPosts } = Astro.props;
+const { tag } = Astro.params;
 ---
 
 <Layout title={title}>
@@ -16,36 +19,68 @@ const { title = "Blog", blogPosts } = Astro.props;
       <h1 class="font-bold text-xl">Blog</h1>
     </div>
   </section>
-  <section class="container py-8">
-    <ul class="grid lg:grid-cols-3 sm:grid-cols-2 gap-8">
+  <section class="container py-12">
+    <nav aria-label="Tags" class="flex flex-wrap gap-4 mb-12">
+      <a
+        href="/blog"
+        class={cn(
+          "text-sm font-medium border px-4 py-1 rounded-full bg-element text-neutral-800 dark:text-neutral-200 border-slate-200 dark:border-white/5",
+          {
+            "bg-primary text-primary-foreground dark:text-primary-foreground":
+              !tag,
+          }
+        )}>All</a
+      >
       {
-        blogPosts.map(({ data, slug }) => (
-          <li class="relative bg-element py-4 px-6 rounded shadow-md shadow:hover dark:shadow-black/40">
-            <article>
-              <a
-                href={`/blog/${slug}`}
-                class="text-lg font-semibold mb-4 block font-serif after:absolute after:inset-0"
-              >
-                <h3>{data.title}</h3>
-              </a>
-              <p class="text-xs font-medium mb-1 text-muted-foreground">
-                {data.publishDate.toLocaleDateString()}
-              </p>
-              <p class="mb-4 text-sm">{data.description}</p>
-              <ul class="flex flex-wrap gap-2">
-                {data.tags.map((tag) => (
-                  <a
-                    href={`/blog/tag/${tag}`}
-                    class="text-xs capitalize font-medium px-2 py-0.5 bg-accent-400/10 text-accent-800 dark:text-accent-200 border-accent-300/20 rounded border relative"
-                  >
-                    {tag}
-                  </a>
-                ))}
-              </ul>
-            </article>
-          </li>
+        tags.map((t) => (
+          <a
+            href={`/blog/tag/${t}`}
+            class={cn(
+              "text-sm font-medium border px-4 py-1 rounded-full bg-element text-neutral-800 dark:text-neutral-200 border-slate-200 dark:border-white/5",
+              {
+                "bg-primary text-primary-foreground dark:text-primary-foreground":
+                  tag === t,
+              }
+            )}
+          >
+            {capitalize(t)}
+          </a>
         ))
       }
-    </ul>
+    </nav>
+    {
+      blogPosts.length === 0 ? (
+        <p class="text-lg font-semibold text-center">Nothing here</p>
+      ) : (
+        <ul class="grid lg:grid-cols-3 sm:grid-cols-2 gap-8">
+          {blogPosts.map(({ data, slug }) => (
+            <li class="relative bg-element py-4 px-6 rounded shadow-md shadow-hover dark:shadow-black/40">
+              <article>
+                <a
+                  href={`/blog/${slug}`}
+                  class="text-lg font-semibold mb-4 block font-serif after:absolute after:inset-0"
+                >
+                  <h3>{data.title}</h3>
+                </a>
+                <p class="text-xs font-medium mb-1 text-muted-foreground">
+                  {data.publishDate.toLocaleDateString()}
+                </p>
+                <p class="mb-4 text-sm">{data.description}</p>
+                <ul class="flex flex-wrap gap-2">
+                  {data.tags.map((tag) => (
+                    <a
+                      href={`/blog/tag/${tag}`}
+                      class="text-xs capitalize font-medium px-2 py-0.5 bg-accent-400/10 text-accent-800 dark:text-accent-200 border-accent-300/20 rounded border relative"
+                    >
+                      {tag}
+                    </a>
+                  ))}
+                </ul>
+              </article>
+            </li>
+          ))}
+        </ul>
+      )
+    }
   </section>
 </Layout>
