--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -30,6 +30,8 @@ const { headings, title } = Astro.props;
                     {
                       "ml-3 mt-2": heading.depth === 3,
                       "ml-6 mt-2": heading.depth === 4,
+                      "ml-9 mt-2": heading.depth === 5,
+                      "ml-12 mt-2": heading.depth === 6,
                     }
                   )}
                 >
