--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Button from "@/components/ui/Button.astro";
 ---
 
 <RootLayout title="Home">
-  <section class="hero">
+  <section class="hero-gradient">
     <div
       class="container grid lg:grid-cols-2 gap-8"
       aria-labelledby="hero-title"
