--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,8 +10,8 @@ import { Icon } from "astro-icon/components";
       <a href="/" class="text-lg font-bold mb-2 block w-fit">Logo</a>
       <p class="font-medium text-sm">&copy; 2024. All rights reserved.</p>
     </div>
-    <div class="grid md:grid-cols-2 gap-8">
-      <nav aria-labelledby="footer-navigation">
+    <div class="grid md:grid-cols-3 gap-8">
+      <nav aria-labelledby="footer-navigation" class="md:col-span-2">
         <h3 id="footer-navigation" class="font-bold mb-2">Website</h3>
         <ul class="flex gap-2 flex-wrap">
           {
