--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -24,7 +24,9 @@ import { ViewTransitions } from "astro:transitions";
   </head>
   <body class="min-h-screen flex flex-col">
     <Header />
-    <div class="not-found grow flex flex-col justify-center items-center">
+    <div
+      class="not-found-gradient grow flex flex-col justify-center items-center"
+    >
       <h1 class="font-bold text-7xl sm:text-9xl mb-16">404</h1>
       <a href="/" class={cn(button({ variant: "default", size: "lg" }))}
         >Back to home</a
