fix: skip to main link not cover logo on mobile device, edit muted foreground color to have better contrast

--- a/src/components/SkipToMain.astro
+++ b/src/components/SkipToMain.astro
@@ -7,7 +7,7 @@ import { button } from "./ui/Button.astro";
   href="#main-content"
   class={cn(
     button({ variant: "default", size: "sm" }),
-    "opacity-0 absolute z-[999] top-3 left-2 transition-opacity duration-200 focus:opacity-100"
+    "opacity-0 absolute z-[999] top-3 -left-96 focus:left-2 transition-opacity duration-200 focus:opacity-100"
   )}
 >
   Skip to main content
