--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -18,7 +18,7 @@ const { headings, title } = Astro.props;
     >
       <nav
         aria-label="Table of content"
-        class="border-l-4 pl-4 border-accent-500/50"
+        class="border-l-4 pl-4 border-fuchsia-600/30"
       >
         <p class="font-extrabold" aria-hidden="true">On this page</p>
         <ul>
