--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -20,8 +20,27 @@ const entries = await getCollection("portfolio");
     <ul class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
       {
         sortByPriority(entries).map((entry) => (
-          <li class="p-6 bg-element rounded shadow">
-            <a href={`/portfolio/${entry.slug}`}>{entry.data.title}</a>
+          <li class="p-6 bg-element rounded shadow-md shadow-hover dark:shadow-black/40 relative">
+            <aricle class="flex flex-col h-full">
+              <a
+                href={`/portfolio/${entry.slug}`}
+                class="after:absolute text-lg block mb-4 after:inset-0 font-bold"
+              >
+                <h3>{entry.data.title}</h3>
+              </a>
+              <p class="mb-6 leading-6 text-muted-foreground text-sm">
+                {entry.data.description}
+              </p>
+              {entry.data.projectSettings && (
+                <ul class="mt-auto flex gap-2 flex-wrap">
+                  {entry.data.projectSettings.techStack.map((item) => (
+                    <span class="text-xs capitalize font-medium px-3 cursor-default py-1 bg-orange-400/10 hover:bg-orange-400/20 transition-colors text-orange-800 dark:text-orange-200 border-orange-300/20 rounded border relative">
+                      {item}
+                    </span>
+                  ))}
+                </ul>
+              )}
+            </aricle>
           </li>
         ))
       }
