update cc for collection to have to write custom slug so the md files can be organized in subfolders

--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -11,7 +11,7 @@ const entries = await getCollection("portfolio");
   <div class="portfolio-gradient banner">
     <div class="container">
       <h1 class="font-bold mb-2 text-2xl">{Config.portfolio.title}</h1>
-      <p class="text-sm italic font-serif">
+      <p class="text-sm font-serif">
         {Config.portfolio.description}
       </p>
     </div>
