--- a/src/layouts/CollectionLayout.astro
+++ b/src/layouts/CollectionLayout.astro
@@ -18,7 +18,7 @@ const { tag } = Astro.params;
   <div class="collection-gradient banner">
     <div class="container">
       <h1 class="font-bold mb-2 text-2xl">{Config.collection.title}</h1>
-      <p class="text-sm italic font-serif">
+      <p class="text-sm font-serif">
         {Config.collection.description}
       </p>
     </div>
