--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,9 +1,12 @@
 ---
 import RootLayout from "@/layouts/RootLayout.astro";
+import Config from "@/config/config.json";
 ---
 
 <RootLayout title="Contact">
-  <section class="container">
-    <h1>Contact</h1>
-  </section>
+  <div class="contact-gradient banner">
+    <div class="container">
+      <h1 class="font-bold mb-2 text-2xl">{Config.contact.title}</h1>
+    </div>
+  </div>
 </RootLayout>
