--- a/src/layouts/CollectionLayout.astro
+++ b/src/layouts/CollectionLayout.astro
@@ -28,7 +28,7 @@ const { tag } = Astro.params;
       <a
         href="/collection"
         class={cn(
-          "text-sm font-medium border px-4 py-1 rounded-full bg-element text-neutral-800 dark:text-neutral-200 border-slate-200 dark:border-white/5",
+          "text-sm font-medium border focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-4 focus-visible:ring-offset-background px-4 py-1 rounded-full bg-element text-neutral-800 dark:text-neutral-200 border-slate-200 dark:border-white/5",
           {
             "bg-primary text-primary-foreground dark:text-primary-foreground":
               !tag,
