--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -4,7 +4,7 @@ import { cva, type VariantProps } from "class-variance-authority";
 import { cn } from "@/lib/utils";
 
 export const button = cva(
-  "inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-semibold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary  disabled:pointer-events-none disabled:opacity-50",
+  "inline-flex items-center justify-center whitespace-nowrap rounded text-sm font-semibold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary  disabled:pointer-events-none disabled:opacity-50",
   {
     variants: {
       variant: {
@@ -15,8 +15,8 @@ export const button = cva(
       },
       size: {
         default: "px-4 py-1.5 text-base",
-        sm: " rounded-md px-3 py-1.5 text-sm",
-        lg: "text-lg rounded-md px-8 py-1.5",
+        sm: " rounded px-3 py-1 text-sm",
+        lg: "font-bold text-base rounded px-8 py-1.5",
         icon: "h-10 w-10",
       },
     },
