--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
 import RootLayout from "@/layouts/RootLayout.astro";
 import Config from "@/config/config.json";
-import Button from "@/components/ui/Button.astro";
+import { button } from "@/components/ui/Button.astro";
+import { cn } from "@/lib/utils";
 ---
 
 <RootLayout title="Home">
   <section class="hero-gradient">
     <div
-      class="container grid lg:grid-cols-2 gap-8"
+      class="container grid lg:grid-cols-2 gap-16"
       aria-labelledby="hero-title"
     >
       <div>
@@ -20,12 +21,14 @@ import Button from "@/components/ui/Button.astro";
         <p class="text-lg mb-10 text-pretty">
           {Config.hero.description}
         </p>
-        <Button
-          className="shadow-primaryBtnShadow dark:shadow-primaryBtnShadow-dark"
-          >{Config.hero.button.label}</Button
+        <a
+          class={cn(button({ variant: "default", size: "lg" }))}
+          href={Config.hero.button.link}>{Config.hero.button.label}</a
         >
       </div>
-      <div class="flex justify-center items-center">Image</div>
+      <div class="flex justify-center items-center">
+        <img src="/images/hero-image.svg" alt="" width="400" height="400" />
+      </div>
     </div>
   </section>
   <section class="container">
